# hubnode

./: .gitignore  GIT_SUBMODULE_MIGRATION_GUIDE.md  LICENSE  README.md  SETTINGS.md  api_monitor_config.json  docker-compose.yml  index.html  package.json  sync-version.json
api/: API_DOCUMENTATION.md  API_REGISTRATION_COMPLETE.md  API_SERVICES_REGISTRY.md  DEPLOYMENT_SUMMARY.md  api_keys.json  auto-discover-services.py  auto-discovery-cron.sh  auto_discovered_services.py  claude-local-sync.py  claude-path-resolver.py  copyparty-admin.py  discovered_services.json  docs-copyparty-auto.html  docs-copyparty.php  docs-gateway-auto.html  docs-gateway.php  docs-services-auto.html  docs-services.php  dynamic-gateway-loader.py  flexpbx-keys.db  flexpbx-keys.py  flexpbx-service.py  gateway.db  generate-copyparty-docs.py  generate-gateway-docs.py  generate-services-docs.py  index.php  load-discovered-services.sh  log-integration-examples.md  public_shares.db  radio-streams.php  service-registry.json  services-manager.py  start-claude-sync.sh  start-flexpbx-service.sh  start-gateway.sh  unified-gateway.py  update-webhook-gateway.sh  user-logs-collector.py  user-logs.db  (+1 more)
backend/: .env.example  ADMIN_ACCESS_GUIDE.txt  CLAUDE_CODE_RECONNECT_INSTRUCTIONS.md  COMPLETE_ACCESS_URLS.md  COPYPARTY_CLIENT_SETUP_UPDATED.md  COPYPARTY_COMPLETE_ACCESS.md  COPYPARTY_NEW_CLIENT_CONFIG.md  Dockerfile  MIGRATION_INSTRUCTIONS.txt  PUBLIC_ACCESS_GUIDE.txt  README.md  api-examples.py  auth_all_methods.py  auth_config.py  composr_api_integration.py  copyparty-additional-apps.txt  copyparty-args-3923.txt  copyparty-args-backup.txt  copyparty-args-fixed.txt  copyparty-args.txt  copyparty-config.py  copyparty-devinecr.txt  copyparty-dom.txt  copyparty-realtime-sync.json  copyparty-secure-config.yaml  copyparty-sfx.py  copyparty-tappedin.txt  copyparty-tetoeehoward.txt  copyparty-walterharper.txt  custom-ui.html  docker-compose.yml  index.js  module_updater.py  package.json  pe-copyparty.0  setup-cross-links.sh  setup-linux-server.sh  setup-permissions-and-web-integration.sh  setup-platform-sync.sh  start-copyparty-enhanced.sh  (+1 more)
clients/: ._patchmate-deployment  copyparty-mcp-server.py  copyparty_manager.py  gui_manager.py  meta.json  status.json
config/: api_monitor_config.json  api_monitor_config.json.backup  version.json  version.json-1759101961.221605-JqZasLhr.json
docker/: .env.example  docker-compose.yaml
documentation/: index.html  (+3 more)
shared-components/: CMakeLists.txt  README.md
(+179 files in other folders)
